K8s/microservices/shipping/network-pod-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-shipping-traffic
spec:
  podSelector:
    matchLabels:
      app: shipping
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns # Allow DNS resolution 
      
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  
  - to:
    - podSelector:
        matchLabels:
          app: cart
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          app: mysql
    ports:  
    - protocol: TCP
      port: 3306
